[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "at1"
version = "0.0.1"
description = "Its a assignment (NBA draft)"
authors = [
  { name = "rakesh" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "==3.11.4"


[tool.ruff]
line-length = 99
src = ["at1"]
include = ["pyproject.toml", "at1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["at1"]
force-sort-within-sections = true

